Correct z-index on main-content

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -176,7 +176,7 @@
   top: 100%;
   width: 100%;
   height: 100%;
-  z-index: 99999;
+  z-index: 3;
 }
 
 /*------------------------------------*\
